SQL generation improvements